--- a/.gitignore
+++ b/.gitignore
@@ -189,3 +189,7 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,jetbrains+all,visualstudiocode
+
+
+/vendor
+composer.lock
